--- a/src/sass/blocks/_cart.scss
+++ b/src/sass/blocks/_cart.scss
@@ -42,3 +42,49 @@
         margin-top: 40px;
     }
 }
+.cart-page {
+    padding-bottom: 20px;
+    .card-wrapper {
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
+    .lk-table {
+        padding-bottom: 35px;
+    }
+}
+.cart-checkout {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    color: $title-color;
+}
+.cart-checkout-row {
+    margin-bottom: 10px;
+}
+.cart-total {
+    font-weight: 700;
+}
+
+@media screen and (max-width: 767px) {
+    .cart-page {
+        .lk-table-pay,
+        .lk-table-remove {
+            width: 50%;
+            order: 1;
+            padding-bottom: 0;
+        }
+        .lk-table-discount {
+            width: 100%;
+            order: 2;
+            padding-top: 0;
+        }
+    }
+}
+
+@media screen and (max-width: 991px) {
+    .cart-page {
+        .lk-table {
+            padding-bottom: 0;
+        }
+    }
+}
