--- a/src/sass/blocks/_select.scss
+++ b/src/sass/blocks/_select.scss
@@ -50,6 +50,7 @@ select.custom-select {
 }
 .custom-option {
 	padding-bottom: 10px;
+	margin-bottom: 0;
 	padding-left: 0;
 	cursor: pointer;
 	&.selection,
