--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -35,6 +35,7 @@
 	display: inline-block;
 	vertical-align: top;
 	padding-left: 0;
+	margin-bottom: 0;
 	&:before {
 		display: none;
 	}
@@ -150,6 +151,7 @@
 	}
 	.mobile-menu-item {
 		padding-left: 0;
+		margin-bottom: 0;
 		&:before {
 			display: none;
 		}
