--- a/src/sass/blocks/_table.scss
+++ b/src/sass/blocks/_table.scss
@@ -87,6 +87,7 @@
     padding-left: 0;
     margin-right: 10px;
     margin-top: 7px;
+    margin-bottom: 0;
     display: inline-block;
     vertical-align: top;
     font-weight: 300;
