--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -26,4 +26,7 @@
 @import "blocks/_table.scss";
 @import "blocks/_action.scss";
 @import "blocks/_cookies.scss";
+@import "blocks/_video.scss";
+@import "blocks/_rating.scss";
+@import "blocks/_accordion.scss";
 @import "blocks/_page.scss";
