Страницы с ошибками и заглушка

--- a/src/sass/dev/_base.scss
+++ b/src/sass/dev/_base.scss
@@ -26,6 +26,20 @@ body {
   z-index: 2;
   position: relative;
 }
+.wrapper-flex {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  main {
+    flex: 1 0 auto;
+    padding: 20px 0;
+  }
+  footer,
+  header {
+    flex: 0 0 auto;
+  }
+}
+
 h1,
 h2,
 h3,
