--- a/src/sass/main-lk.scss
+++ b/src/sass/main-lk.scss
@@ -21,3 +21,5 @@
 @import "blocks/_cart.scss";
 @import "blocks/_cookies.scss";
 @import "blocks/_page-lk.scss";
+@import "blocks/_error.scss";
+@import "blocks/_maintenance.scss";
