--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -30,3 +30,5 @@
 @import "blocks/_rating.scss";
 @import "blocks/_accordion.scss";
 @import "blocks/_page.scss";
+@import "blocks/_error.scss";
+@import "blocks/_maintenance.scss";
