--- a/src/sass/main-lk.scss
+++ b/src/sass/main-lk.scss
@@ -16,6 +16,7 @@
 @import "blocks/_select.scss";
 @import "blocks/_sidebar.scss";
 @import "blocks/_table.scss";
+@import "blocks/_pagination.scss";
 @import "blocks/_tabs.scss";
 @import "blocks/_card.scss";
 @import "blocks/_cart.scss";
