--- a/src/sass/blocks/_table.scss
+++ b/src/sass/blocks/_table.scss
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 .lk-table-row-th {
     border-bottom: 0.75px solid #ABABAB;
@@ -57,12 +58,17 @@
 .lk-table-cash,
 .lk-table-pay,
 .lk-table-discount,
-.lk-table-update {
+.lk-table-update,
+.lk-table-user {
     width: 20%;
 }
 
 .lk-table-status,
-.lk-table-remove {
+.lk-table-remove,
+.lk-table-date,
+.lk-table-sum,
+.lk-table-code,
+.lk-table-type {
     width: 10%;
 }
 .remove-btn {
@@ -134,6 +140,30 @@
         color: $gray;
     }
 }
+.lk-table-payments {
+    .lk-table-name {
+        width: 30%;
+    }
+    .lk-table-td span {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .lk-table-payments {
+        .lk-table-name,
+        .lk-table-user,
+        .lk-table-code {
+            width: 100%;
+        }
+        .lk-table-status,
+        .lk-table-date,
+        .lk-table-sum,
+        .lk-table-type {
+            width: 50%;
+        }
+    }
+}
 @media screen and (max-width: 767px) {
     .lk-table-th {
         display: none;
@@ -150,9 +180,13 @@
     .lk-table-cash,
     .lk-table-update,
     .lk-table-status,
-    .lk-table-remove {
+    .lk-table-remove,
+    .lk-table-date,
+    .lk-table-sum,
+    .lk-table-type {
         width: 50%;
     }
+
     .lk-table-update,
     .lk-table-remove {
         text-align: right;
@@ -189,6 +223,19 @@
     .lk-table-update {
         width: 20%;
     }
+    .lk-table-payments {
+        .lk-table-name,
+        .lk-table-user {
+            width: 50%;
+        }
+        .lk-table-date,
+        .lk-table-sum,
+        .lk-table-code,
+        .lk-table-type,
+        .lk-table-status {
+            width: 20%;
+        }
+    }
 }
 
 @media screen and (max-width: 1199px) {
@@ -197,5 +244,34 @@
     }
     .lk-table-update {
         width: 15%;
+    }
+    .lk-table-payments {
+        .lk-table-row {
+            justify-content: flex-start;
+        }
+        .lk-table-td {
+            padding: 5px 10px 5px 0;
+            span {
+            display: block;
+            font-weight: 400;
+            font-size: 10px;
+            line-height: 11px;
+            color: #ABABAB;
+            }
+        }
+        .lk-table-row-th {
+            display: none;
+        }
+        .lk-table-name,
+        .lk-table-user {
+            width: 30%;
+        }
+        .lk-table-date,
+        .lk-table-sum,
+        .lk-table-code,
+        .lk-table-type,
+        .lk-table-status {
+            width: 20%;
+        }
     }
 }
