--- a/src/sass/blocks/_divider.scss
+++ b/src/sass/blocks/_divider.scss
@@ -69,6 +69,14 @@
     background-color: #F3F3F3;
 }
 
+.divider-line {
+    width: 100%;
+    height: 1px;
+    background-color: #ABABAB;
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+
 
 @media screen and (max-width: 767px) {
     .divider-1 {
