--- a/src/sass/blocks/_form.scss
+++ b/src/sass/blocks/_form.scss
@@ -30,16 +30,19 @@ fieldset {
 		margin-bottom: 5px;
 	}
 }
-label {
+label,
+.label-field {
 	font-weight: normal;
 	font-size: 10px;
 	color: #ABABAB;
 	line-height: normal;
 	display: block;
 	margin-top: 7px;
+	margin-bottom: 3px;
 	& + input,
 	& + .custom-select-wrapper,
-	& + textarea {
+	& + textarea,
+	& + .uploader-box {
 		margin-top: 3px;
 	}
 }
@@ -89,6 +92,12 @@ textarea {
 button {
 	outline: none;
 }
+.label-radio {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	color: $gray;
+}
 .error-field {
 	border: 1px solid #D84747;
 }
@@ -124,6 +133,9 @@ button {
 }
 .field-group {
 	margin-bottom: 15px;
+	.field-desc {
+		max-width: 80%;
+	}
 }
 .send-box {
 	position: absolute;
@@ -255,6 +267,9 @@ button {
 	cursor: pointer;
 	border-radius: 5px;
 }
+.file-field-label--dark-blue {
+	background-color: $dark-blue;
+}
 .file-field {
 	position: absolute;
     top: 0;
@@ -271,6 +286,12 @@ button {
 .file-field-label:hover,
 .file-field-label:focus {
 	background: $dark-blue;
+}
+.file-field:hover + .file-field-label--dark-blue,
+.file-field:focus + .file-field-label--dark-blue,
+.file-field-label--dark-blue:hover,
+.file-field-label--dark-blue:focus {
+	background: $blue;
 }
 
 .file-return {
@@ -299,6 +320,33 @@ button {
 .coupon-form-field {
 	margin-right: 7px;
 }
+
+.uploader-box {
+	overflow: hidden;
+	margin-bottom: 7px;
+	background: $blue url(../img/img-field.svg) center no-repeat;
+	img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
+.uploader-box--small {
+	width: 196px;
+	height: 196px;
+}
+.uploader-box--full {
+	width: 100%;
+	height: 196px;
+}
+.field-desc {
+	max-width: 80%;
+	font-weight: 300;
+	font-size: 12px;
+	line-height: 17px;
+	color: $dark-gray;
+}
+
 
 @media screen and (max-width: 767px) {
 	.search {
