--- a/src/sass/main-lk.scss
+++ b/src/sass/main-lk.scss
@@ -23,4 +23,5 @@
 @import "blocks/_cookies.scss";
 @import "blocks/_page-lk.scss";
 @import "blocks/_error.scss";
+@import "blocks/_divider.scss";
 @import "blocks/_maintenance.scss";
